--- a/jsconfig.json
+++ b/jsconfig.json
@@ -22,11 +22,16 @@
      * Typecheck JS in `.svelte` and `.js` files by default.
      * Disable this if you'd like to use dynamic types.
      */
-    "checkJs": false
+    "checkJs": false,
+    "types": ["svelte"]
   },
   /**
    * Use global.d.ts instead of compilerOptions.types
    * to avoid limiting type declarations.
    */
-  "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"]
+  "include": ["src/**/*.js", "src/**/*.svelte", "node_modules/@sveltejs/kit/types/**/*.d.ts"],
+  "exclude": ["node_modules"],
+  "typeAcquisition": {
+    "exclude": ["babel__core", "babel__generator", "babel__template", "babel__traverse", "eslint", "estree", "graceful-fs", "istanbul-lib-coverage", "istanbul-lib-report", "istanbul-reports", "json-schema", "linkify-it", "markdown-it", "mdurl", "node", "stack-utils", "yargs", "yargs-parser"]
+  }
 }
