--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
     "remoteMaintenanceOffStag": "./remoteDeploy.sh stag maintenance off"
   },
   "devDependencies": {
-    "@eslint/js": "^9.5.0",
-    "@sveltejs/vite-plugin-svelte": "^3.1.1",
-    "eslint": "^9.5.0",
-    "eslint-plugin-svelte": "^2.40.0",
-    "globals": "^15.6.0",
+    "@eslint/js": "^9.14.0",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "eslint": "^9.14.0",
+    "eslint-plugin-svelte": "^2.46.0",
+    "globals": "^15.12.0",
     "jest": "^29.7.0",
-    "jsdoc": "^4.0.3",
-    "vite-plugin-eslint": "^1.8.1"
+    "jsdoc": "^4.0.4",
+    "vite-plugin-eslint": "^1.8.1",
+    "sass": "^1.80.7",
+    "svelte": "^4.2.19",
+    "svelte-spa-router": "^4.0.1",
+    "vite": "^5.4.11"
   },
   "dependencies": {
-    "sass": "^1.77.6",
-    "svelte": "^4.2.18",
-    "svelte-spa-router": "^4.0.1",
-    "vite": "^5.3.1"
   }
 }
